# DynNav-Dynamic-Navigation-Rerouting-in-Unknown-Environments_ubuntu

./: README.md  analyze_uncertainty_calibration.py  heuristic_net_curriculum_8_16_32.pt  heuristic_net_frac_10.pt  heuristic_net_frac_100.pt  heuristic_net_frac_25.pt  heuristic_net_frac_50.pt  heuristic_net_h128.pt  heuristic_net_h32.pt  heuristic_net_h64.pt  heuristic_net_residual.pt  heuristic_net_unc.pt  learned_heuristic_uncertainty.py  mi_nbv_planner.py  planner_dataset_norm_stats_curriculum.npz  planner_dataset_norm_stats_frac_10.npz  planner_dataset_norm_stats_frac_100.npz  planner_dataset_norm_stats_frac_25.npz  planner_dataset_norm_stats_frac_50.npz  planner_dataset_norm_stats_residual.npz  setup.py  train_heuristic.py  train_heuristic_ablation.py  train_heuristic_curriculum.py  train_heuristic_data_sweep.py  train_heuristic_uncertainty.py  train_residual_heuristic.py  viz_single_instance.py  vla_cost_fusion.py  vla_demo.py  vla_intents.py
data_curriculum/: planner_dataset_size16.npz  planner_dataset_size32.npz  planner_dataset_size8.npz
experiments/: analyze_ablation_hidden.py  analyze_astar_results.py  analyze_curriculum_generalization.py  analyze_multiobj_astar_stats.py  analyze_static_vs_online_mo.py  analyze_suboptimality.py  compare_multiobj_vs_classic_astar.py  (+10 more)
install/nav_research/share/nav_research/: package.dsv  package.ps1  package.sh  package.xml
install/nav_research/share/nav_research/config/: dynamic_nav_params.yaml  nav2_params.yaml
install/nav_research/share/nav_research/launch/: bringup_slam.launch.py  dynamic_nav_tb3.launch.py
(+70 files in other folders)
